Finished Slot viewflipper

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".Gui.HomeActivity" />
         <activity android:name=".Gui.CreateAccount.CreateAccountActivity" />
-        <activity android:name=".Gui.Register.LoginActivity" />
+        <activity android:name=".Gui.Login.LoginActivity" />
         <activity android:name=".Gui.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
