--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,9 @@ dependencies {
 
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+//    implementation 'com.facebook.android:facebook-login:5.1.1'
     implementation 'com.facebook.android:facebook-login:[5,6)'
+
     implementation 'com.github.ybq:Android-SpinKit:1.2.0'
 
     implementation 'com.android.support:support-compat:28.0.0'
